Update on code errors
Some errors has been corrected